--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -25,3 +25,8 @@ change_password=Change password
 delete_user=Delete user
 change=Change
 delete=Delete
+logout=Logout
+enter_new_name=Enter new name
+update_name=Update name
+characters=Characters
+user_page=User page
