--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -30,3 +30,18 @@ enter_new_name=Enter new name
 update_name=Update name
 characters=Characters
 user_page=User page
+reg=Registration
+stat=Statistic
+hello_stranger=Greetings, wanderer. I am not entirely surprised to see you. Many adventurers have come here since the troubles began.
+diablo=I am sure you are aware of the tragedy that has befallen Tristram. They say that Diablo, the Lord of Terror, has come into the world once more.
+dont=I do not know whether to believe it or not, but the Dark Wanderer passed through this way a few weeks ago. He headed east towards the mountains, taking the path guarded by the Monastery of the Wanderers.
+maybe=It may not mean anything, but evil left its mark where he passed. Not long after his passage, the Monastery Gates closed, and strange creatures began to appear in the land.
+lut_gholein=Until the camp is safer and the gates open again, I will remain here with my caravan. I hope to reach Lut Gholein before the shadow from Tristram engulfs us all. If you're alive and here, I can take you with me.
+akara=I suggest you talk to Akara. It looks like she's in charge of this camp. Maybe she can tell you more.
+after=After returning, you see the happy faces of the camp residents. Everyone thanks you for your help. Varriv suggests heading east.
+quest_completed=You have completed the game! Congratulations!
+next_page=Next
+name=Name
+class=Class
+game_quantity=Game quantity
+win_quantity=Win quantity
